--- a/the_posting_hub/core/templates/core/home.html
+++ b/the_posting_hub/core/templates/core/home.html
@@ -5,7 +5,9 @@
   <div class="text-center">
     <h1>Welcome to The Posting Hub</h1>
     <p>Share yout thoughts. Find what matters.</p>
-    <button class="btn">Create Post -></button>
+    <a href="/login">
+      <button class="btn">Create Post -></button>
+    </a>
   </div>
 </section>
 
@@ -39,52 +41,13 @@
 
 <div class="line-break"></div>
 
-<section id="post-section">
-  <h2>What’s Trending Across the Hub</h2>
-  <p>From viral snapshots to powerful words, these posts are making waves.<br> Explore the top moments that are taking
-    over the community right now.</p>
-  <div class="card-container">
-    <div class="card">
-      <p>"I’ve tried several content generation tools, but this AI-driven tool is by far the best. It understands my
-        brand’s voice and consistently produces content that resonates with my audience!"</p>
-      <div><img src="../../../static/team-photos/anas-team-photo.jpg" alt="User Image">
-        <p>Anas Rahim</p>
-      </div>
-    </div>
-
-    <div class="card">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vitae elit libero, a pharetra augue. Curabitur
-        blandit tempus porttitor. Sed posuere consectetur est at lobortis. Cras mattis consectetur purus sit amet
-        fermentum.</p>
-      <div><img src="../../../static/team-photos/anas-team-photo.jpg" alt="User Image">
-        <p>Anas Rahim</p>
-      </div>
-    </div>
-
-    <div class="card">
-      <p>Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia
-        nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur
-        tortor.</p>
-      <div><img src="../../../static/team-photos/anas-team-photo.jpg" alt="User Image">
-        <p>Anas Rahim</p>
-      </div>
-    </div>
-
-    <div class="card">
-      <p>"I’ve tried several content generation tools, but this AI-driven tool is by far the best. It understands my
-        brand’s voice and consistently produces content that resonates with my audience!"</p>
-      <div><img src="../../../static/team-photos/anas-team-photo.jpg" alt="User Image">
-        <p>Anas Rahim</p>
-      </div>
-    </div>
-  </div>
-</section>
-
 <section id="about-section">
   <h2>ABOUT US</h2>
   <p>Need help, have feedback, or just want to say hi? Our team is always ready to hear from you.<br>
     Let's connect and make your experience even better.</p>
-  <button class="btn">About Us</button>
+  <a href="/about">
+    <button class="btn">About Us</button>
+  </a>
   <div class="card-container">
     <div class="card">
       <h3>Mission Statement</h3>
@@ -111,7 +74,9 @@
   <h2>Have Questions? We're Just a Click Away</h2>
   <p>Need help, have feedback, or just want to say hi? Our team is always ready to hear from you.<br>
     Let's connect and make your experience even better.</p>
-  <button class="btn">Contact Us</button>
+  <a href="/contact">
+    <button class="btn">Contact Us</button>
+  </a>
 </section>
 
 <footer class="text-white mt-5">
@@ -155,8 +120,8 @@
         <h5>Quick Links</h5>
         <ul class="list-unstyled">
           <li class="mb-2"><a href="#home-section" class="text-white text-decoration-none">Home</a></li>
-          <li class="mb-2"><a href="/about" class="text-white text-decoration-none">About</a></li>
-          <li class="mb-2"><a href="/about" class="text-white text-decoration-none">Our Team</a></li>
+          <li class="mb-2"><a href="/about" class="text-white text-decoration-none">About Us</a></li>
+          <li class="mb-2"><a href="/contact" class="text-white text-decoration-none">Contact Us</a></li>
         </ul>
       </div>
     </div>
